_sass/includes/_footer.scss
.site-footer {

    @extend %padding-regular;
    display: inline-block;
    text-align: center;
    width: 100%;
    color: lighten($text-color, 30%);
    font-size: 0.9em;

    h1 {
        font-size: 2em;
    }

    .column {
        padding: 3.5% 3.5%;
    }


    .footer-content {
        /* Align center but start lines from same position on lef */
        text-align: left;

        @media (min-width: 640px) {
            display: inline-block;
        }

    }

    #contact {
        line-height: 1.4em;

        .url {
            color: inherit; /* blue colors for links too */
            text-decoration: inherit; /* no underline */
            pointer-events: none;
            cursor: default;
        }
        a {
            color: $footer-links-color;
        }
    }
    .notice {
        padding: 2%;
    }
}

